--- a/RPGVXAcecn/rgss/gc_bitmap.html
+++ b/RPGVXAcecn/rgss/gc_bitmap.html
@@ -7,7 +7,7 @@ type=text/css href="../style.css">
 <BODY>
 <H1>Bitmap</H1>
 <P>位图类，其实就是图像类。</P>
-<P>在画面上显示位图，必须使用精灵（<A href="gc_sprite.html">Sprite</A>&nbsp;)<FONT face=Verdana>之类的对象。</FONT></P>
+<P>在画面上显示位图，必须使用精灵（<A href="gc_sprite.html">Sprite</A>&nbsp;)之类的对象。</P>
 <H2>超类</H2>
 <UL>
   <LI><A href="sc_object.html">Object</A> </LI></UL>
