--- a/RPGVXAcecn/rgss/gc_tone.html
+++ b/RPGVXAcecn/rgss/gc_tone.html
@@ -16,7 +16,7 @@ type=text/css href="../style.css">
   <VAR>gray</VAR>]) 
   <DT>Tone.new <SPAN class=rgss3>(RGSS3)</SPAN> 
   <DD>
-  <P>生成色调物件。<VAR>gray</VAR> 值省略时使用 0。</P>
+  <P>生成色调对象。<VAR>gray</VAR> 值省略时使用 0。</P>
   <P>若没有指定参数，则取默认值为(0, 0, 0, 0)。 <SPAN class=rgss3>(RGSS3)</SPAN></P></DD></DL>
 <H2>方法</H2>
 <DL>
