--- a/RPGVXAcecn/rgss/gc_window.html
+++ b/RPGVXAcecn/rgss/gc_window.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
-<H1>Window 窗口类</H1>
+<H1>Window</H1>
 <P>游戏窗口的类。在内部由多重的精灵所组成。</P>
 <H2>超类</H2>
 <UL>
