--- a/RPGVXAcecn/rgss/gm_graphics.html
+++ b/RPGVXAcecn/rgss/gm_graphics.html
@@ -11,7 +11,7 @@ type=text/css href="../style.css">
 <DL>
   <DT>Graphics.update
   <DD>
-  <P>用一帧的时间刷新游戏画面和游戏物件调用该方法需要进行时间间隔设置。</P><PRE>loop do
+  <P>用一帧的时间刷新游戏画面和游戏对象调用该方法需要进行时间间隔设置。</P><PRE>loop do
   Graphics.update
   Input.update
   do_something
