--- a/RPGVXAcecn/rgss/rgss.html
+++ b/RPGVXAcecn/rgss/rgss.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>RGSS ╧Ф╦Я</FONT></H1>
+<H1>RGSS ╧Ф╦Я</H1>
 <UL>
   <LI><A href="#whats_new">RGSS3 ╣дпб╧╕дэ</A>
   <LI><A href="#game_run">©╙й╪сно╥</A>
@@ -19,8 +19,8 @@ type=text/css href="../style.css">
     <LI><A href="#ext_lib">ю╘у╧©Б</A>
     <LI><A href="#character_code">вж╥Ш╪╞</A>
     <LI><A href="#property">йТпт</A> </LI></UL></LI></UL>
-<H2><A name=whats_new>RGSS3</A>&nbsp;пб╧╕дэ╫Ииэ <FONT face=Verdana><SPAN
-class=rgss3>(RGSS3)</SPAN> </FONT></H2>
+<H2><A name=whats_new>RGSS3</A>&nbsp;пб╧╕дэ╫Ииэ <SPAN
+class=rgss3>(RGSS3)</SPAN> </H2>
 <P>RGSS3 йгдзжцсз&nbsp;RPG Maker VX Ace ╣др╩лв╫е╠╬о╣мЁё╛ ╨м RMVX жп╣д RGSS2
 ╠хфПю╢сп╨э╤Ю╣д╡╩м╛ж╝╢╕ё╛жВр╙╣д╠Д╩╞хГобё╨</P>
 <UL>
@@ -44,8 +44,8 @@ class=rgss3>(RGSS3)</SPAN> </FONT></H2>
   Input.trigger?(:C)║ё
   <LI>╣╠ЁлпР╥╒иЗ╢МнС╣дй╠╨Рё╛╫╚╩Авт╤╞отй╬р╩╦ЖлАй╬©РртоЙо╦к╣цВ╢МнСпео╒║ё </LI></UL>
 <P>ЁЩ╢кж╝мБё╛╩╧спр╩п╘п║╠Д╩╞аТ╢Щсц╩╖втппл╫кВ║ё</P>
-<P>тз╠╬нджпё╛кЫсптзRGSS3жпжьпб╤╗рЕ╣д╡©╥ж╤╪╩Асц╢к╥Ш╨е╫Ьпп╠Йв╒ё╨&nbsp;<FONT face=Verdana><SPAN
-class=rgss3>(RGSS3)&nbsp; </FONT><FONT color=#000000>║ё</FONT></SPAN></P>
+<P>тз╠╬нджпё╛кЫсптзRGSS3жпжьпб╤╗рЕ╣д╡©╥ж╤╪╩Асц╢к╥Ш╨е╫Ьпп╠Йв╒ё╨&nbsp;<SPAN
+class=rgss3>(RGSS3)&nbsp; <FONT color=#000000>║ё</FONT></SPAN></P>
 <H2>©╙й╪сно╥</H2><IMG class=float_r alt="game folder" src="img/folder.png">
 <P>р╩╟Ц╣дё╛╣╠дЦк╚╩ВGame.exeнд╪Ч╣дй╠╨Рё╛ЁлпР╬м╩Авт╤╞©╙й╪╪стьRGSS3ткпп©Бртж╖Ёжсно╥ЁлпР╣дткппё╛╤Ь╢Ф╢╒уБп╘нд╪Ч╣днд╪Ч╪пё╛м╗Ёё╬м╠╩Ёфн╙сно╥д©б╪║ё</P>
 <P>уЩтз╠Ю╪╜жп╣дсно╥©иртм╗╧Щтз╡к╣╔жпя║тЯсно╥пт╡Бйт╩РуътзйЩ╬щ©Б - ╣пх╨жпя║тЯу╫╤╥╡Бйт║ё хГ╧ШдЦя║тЯаксно╥пт╡Бйтё╛дгц╢╠Да© $TEST
@@ -53,12 +53,12 @@ class=rgss3>(RGSS3)&nbsp; </FONT><FONT color=#000000>║ё</FONT></SPAN></P>
 <P>сно╥фДкШ╣др╩п╘иХ╤╗тР╢Ф╢╒сз&nbsp;<A href="#game_ini">Game.ini</A>&nbsp;уБ╦ЖеДжцнд╪Ч╣╠жп║ё</P>
 <H2><A name=game_ini>Game.ini</A></H2>
 <P>Game.ini йгтз╧╓Ёл╫╗а╒ж╝ЁУ╬м╠╩вт╤╞╢╢╫╗╣дё╛╡╒гр©иртсихМ╪Ч╠╬иМ╫Ьпп╦Эпб╡ывВё╛╣╚йгкЭр╡©ирт╠╩╪гйб╠╬рт╪╟фДкШндвж╠Ю╪╜хМ╪Ч╠Ю╪╜║ё</P>
-<P>╥╤юЩё╨</P><PRE><FONT face=Verdana>[Game]
+<P>╥╤юЩё╨</P><PRE>[Game]
 RTP=RPGVXAce
 Library=System\RGSS300.dll
 Scripts=Data\Scripts.rvdata2
 Title=RubyQuest
-</FONT></PRE>
+</PRE>
 <DL>
   <DT>
   <DT>RTP
@@ -89,14 +89,14 @@ href="gm_audio.html#bgs_play">Audio.bgs_play</A>, <A
 href="gm_audio.html#me_play">Audio.me_play</A>, <A
 href="gm_audio.html#se_play">Audio.se_play</A>, <A
 href="gm_graphics.html#transition">Graphics.transition</A></P>
-<H3><FONT face=Verdana>╟╡в╟йЩ╬щ</FONT></H3>
+<H3>╟╡в╟йЩ╬щ</H3>
 <P>RPG Maker VX
 Ace&nbsp;жпн╗р╩╠Йв╪╣дRTP╪╞╬мйг"RPGVXAce"ё╛╣╚йгожтздЦря╬╜©иртвтпп╢╢╫╗╤юа╒╣дRTP╪╞ак║ёхГ╧ШдЦж╙╣юхГ╨нжфвВ╟╡в╟╟Эё╛
 дгц╢дЦ╬м©иртвЯя╜ртоб╧ФтРю╢╤╗жф╤юль╣дRTP╪╞║ё</P>
-<P>р╩╟Цю╢к╣ё╛RTP╩А╠╩╟╡в╟╫ЬуБ╦Жд©б╪ё╨ </P><PRE><FONT face=Verdana>[CommonFilesFolder]\Enterbrain\RGSS3\[RTPName]
-</FONT></PRE>уБюО╣д [CommonFilesFolder] фДй╣╬мйг╡ывВо╣мЁжп╣д ⌠Common Files нд╪Ч╪пё╛&nbsp;╤Ь
-[RTPName] тРйгRTP╪╞╣дцШвж║ё╠ххГё╨ <PRE><FONT face=Verdana>C:\Program Files\Common Files\Enterbrain\RGSS3\Standard
-</FONT></PRE>
+<P>р╩╟Цю╢к╣ё╛RTP╩А╠╩╟╡в╟╫ЬуБ╦Жд©б╪ё╨ </P><PRE>[CommonFilesFolder]\Enterbrain\RGSS3\[RTPName]
+</PRE>уБюО╣д [CommonFilesFolder] фДй╣╬мйг╡ывВо╣мЁжп╣д ⌠Common Files нд╪Ч╪пё╛&nbsp;╤Ь
+[RTPName] тРйгRTP╪╞╣дцШвж║ё╠ххГё╨ <PRE>C:\Program Files\Common Files\Enterbrain\RGSS3\Standard
+</PRE>
 <P>RTP╟╡в╟ЁлпР╩АтзуБ╦Жн╩жцп╢хКр╩╦Жвж╥Ш╢╝юЮпм╣д╪Эж╣рт╤╗н╩RTPнд╪Чн╩жц&nbsp;"HKEY_LOCAL_MACHINE\SOFTWARE\Enterbrain\RGSS3\RTP"ё╛RGSS
 ╫е╠╬╢ЗбКр╡╩Ам╗╧ЩуБ╦Ж╪Эж╣ю╢а╛╫с╣╫RTPжп╣днд╪Ч║ё.</P>
 <H2>╪сцэ╣╣╟╦</H2>
@@ -113,7 +113,7 @@ dir=ltr>╤тсно╥╫Ьпп╪сцэё╛©ирттзр╩╤╗Ёл╤хио╥юж╧╠Пхк╤тсно╥╫Ьпппч╦д/╥жнЖ║ёдЦ©иртм╗╧Щт
   жпж╦╤╗╣д╫е╠╬нд╪Чё╗р╩╟ЦйгData\Scripts.rvdataё╘м╗Ёё╡╩╩А╠╩╫Б╤аё╛╤Ьйгж╠╫с╤ах║╪сцэ╣╣╟╦жп╣д╫е╠╬ё╛уБр╡йгн╙ак╥юж╧фДкШхкм╗╧ЩткппмБ╡©╫е╠╬╤Ь╢О╣╫╤ах║дз╡©нд╪Ч╣дд©╣д║ё</P></BLOCKQUOTE>
 <P>╪Ьсз╪сцэ╣╣╟╦╣диХ╪фЁУжтё╛нрцг╡╩╩А╧╚╡╪хн╨н╧ьсзоЮ╧ь╪сцэкЦ╥╗╣дпео╒ё╛гК╡╩р╙йтм╪╥жнЖ╩Руъфф╫БкЭ║ё</P>
 <H2 style="MARGIN-RIGHT: 0px" dir=ltr>фДкШ</H2>
-<H3><A name=ext_lib><FONT face=Verdana>ю╘у╧©Б</FONT></A></H3>
+<H3><A name=ext_lib>ю╘у╧©Б</A></H3>
 <P>RGSS нч╥╗╪стьтзCсОят╩╥╬Ёоб╠Юп╢╣дRubyю╘у╧©Б.ё╛уБр╡йгн╙й╡ц╢нрцгтйпМ╪стьртобюЮпм╣дю╘у╧©Б╣дт╜рРё╨</P>
 <UL>
   <LI>dl
@@ -122,18 +122,18 @@ dir=ltr>╤тсно╥╫Ьпп╪сцэё╛©ирттзр╩╤╗Ёл╤хио╥юж╧╠Пхк╤тсно╥╫Ьпппч╦д/╥жнЖ║ёдЦ©иртм╗╧Щт
   <LI>utf_16_32
   <LI>japanese_sjis
   <LI>Win32API </LI></UL>
-<H3><A name=character_code><FONT face=Verdana>вж╥Ш╪╞</FONT></A></H3>
+<H3><A name=character_code>вж╥Ш╪╞</A></H3>
 <P>RGSS й╧сц╣дйг UTF-8 вж╥Ш╠ЮбК║ё UTF-8&nbsp;йг Unicode вж╥Ш╠ЮбК╣др╩╦Ж╥жж╖ё╛╤Ь Unicode
 вж╥Ш╠ЮбК©иртж╖Ёжйю╫ГиокЫспюЮпмндвж╣дотй╬║ё</P>
 <P>RPG Maker кЫйДЁЖ╣днд╪Чжпё╛╠ЮбК╥╫й╫х╚╡©н╙ UTF-8 ё╛кЫрт╡╩╠ь╣ёпдрРн╙вж╥Ш╠ЮбК╥╫й╫╡╩м╛╤Ь╡ЗиЗ╣дЁЕм╩║ё</P>
-<H3><A name=property><FONT face=Verdana>йТпт</FONT></A></H3>
+<H3><A name=property>йТпт</A></H3>
 <P>"йТпт"йгр╩╦Ж&nbsp;<A href="g_index.html">сно╥©Б</A> жп╣д╦едНё╛кЭ╡╒╥г Ruby юОЁЖож╣д╦едНё╛╤Ьйгр╩жж RGSS
 жп╤юсп╣д╦едН║ё</P>
-<P>╠ххГё╛юШсцобцФ╣д╢ЗбК©ирт╩Ях║╨миХ╤╗р╩╦Ж╬╚аИ╣двЬ╠Й(<A href="gc_sprite.html#x">Sprite#x</A>)ё╨</P><PRE><FONT face=Verdana>x = sprite1.x            # ╩Ях║
-sprite2.x = x + 32    # иХ╤╗</FONT></PRE>
+<P>╠ххГё╛юШсцобцФ╣д╢ЗбК©ирт╩Ях║╨миХ╤╗р╩╦Ж╬╚аИ╣двЬ╠Й(<A href="gc_sprite.html#x">Sprite#x</A>)ё╨</P><PRE>x = sprite1.x            # ╩Ях║
+sprite2.x = x + 32    # иХ╤╗</PRE>
 <P>н╙ак╥╫╠ЦфП╪Шё╛уБ╠╩╤╗рЕн╙©им╗╧Щ╦Ёж╣тккЦ╥Ш╫Ьпп╩Ях║ё╗╤аЁЖё╘╨миХ╤╗ё╗п╢хКё╘╣д╥╫╥╗ё╛╬мЁфн╙"йТпт"║ё</P>
 <P>╣╚йгхГм╛ <A href="gc_color.html">Color</A>&nbsp;юЮ║╒ <A
 href="gc_tone.html">Tone</A>&nbsp;юЮ║╒&nbsp;<A href="gc_rect.html">Rect</A>&nbsp;юЮ
-╣д╤тоСё╛кЫ╥╣╩ь╣дйг╤тоС╣д╡нууж╣ё╛╤Ь╥г╤тоС╣д╦╠╠╬║ёрР╢к©иртсцобцФ╣д╦Яй╫пч╦двжлЕяуи╚ё╨</P><PRE><FONT face=Verdana>color = font1.color
-color.set(255, 0, 0)</FONT></PRE>
+╣д╤тоСё╛кЫ╥╣╩ь╣дйг╤тоС╣д╡нууж╣ё╛╤Ь╥г╤тоС╣д╦╠╠╬║ёрР╢к©иртсцобцФ╣д╦Яй╫пч╦двжлЕяуи╚ё╨</P><PRE>color = font1.color
+color.set(255, 0, 0)</PRE>
 <H6>&nbsp;</H6></BODY></HTML>
