--- a/RPGVXAcecn/rgss/s_classes.html
+++ b/RPGVXAcecn/rgss/s_classes.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>内建类</FONT></H1>
+<H1>内建类</H1>
 <UL>
   <LI><A href="sc_object.html">Object</A> 
   <UL>
