--- a/RPGVXAcecn/rgss/s_exceptions.html
+++ b/RPGVXAcecn/rgss/s_exceptions.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17785"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>内建异常类</FONT></H1>
+<H1>内建异常类</H1>
 <DL>
   <DT><A href="sc_exception.html">Exception</A> 
   <DD>所有异常类的超类。 
