--- a/RPGVXAcecn/rgss/s_index.html
+++ b/RPGVXAcecn/rgss/s_index.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>标准库</FONT></H1>
+<H1>标准库</H1>
 <UL>
   <LI><A href="s_functions.html">内建函数</A> 
   <LI><A href="s_variables.html">内建变量</A> 
