--- a/RPGVXAcecn/rgss/s_variables.html
+++ b/RPGVXAcecn/rgss/s_variables.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>内建变量</FONT></H1>
+<H1>内建变量</H1>
 <P>内建变量是全局变量的一种，但是其中的值并非只限于全局使用。</P>
 <P>下面是以作用范围不同区分的一些内建变量例子：</P>
 <H2>区域范围</H2>
