--- a/RPGVXAcecn/rgss/sc_exception.html
+++ b/RPGVXAcecn/rgss/sc_exception.html
@@ -16,7 +16,7 @@ type=text/css href="../style.css">
 <DL>
   <DT>Exception.new([<VAR>error_message</VAR>]) 
   <DD>
-  <P>生成并返回一个新的异常物件。可以提供一个作为错误信息的字符串作为参数。该信息就是 <A 
+  <P>生成并返回一个新的异常对象。可以提供一个作为错误信息的字符串作为参数。该信息就是 <A 
   href="#L000732">message</A> 
   属性（参看下方）的值，并由默认的异常处理器显示出来。</P></DD></DL>
 <H2>方法</H2>
