--- a/RPGVXAcecn/rgss/sc_file.html
+++ b/RPGVXAcecn/rgss/sc_file.html
@@ -18,7 +18,7 @@ href="s_functions.html#L000379">open</A>
 <DL>
   <DT>File.mtime(<VAR>filename</VAR>) 
   <DD>
-  <P>返回上次修改时间 （<A href="sc_time.html">Time</A> 物件）。</P>
+  <P>返回上次修改时间 （<A href="sc_time.html">Time</A> 对象）。</P>
   <P>若是读取失败，抛出 <A href="s_exceptions.html#Errno">Errno::EXXX</A> 异常。</P>
   <DT><A name=L000960>File.basename(<VAR>filename</VAR>[,
   <VAR>suffix</VAR>])</A> 
