--- a/RPGVXAcecn/rgss/sc_fixnum.html
+++ b/RPGVXAcecn/rgss/sc_fixnum.html
@@ -1,24 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>Fixnum</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
 <H1>Fixnum</H1>
-<P>符合机器指针容量的固定长度的整数类，通常为 31 位长。若是运算结果超出 Fixnum 的范围，则自动延伸成 
+<P>符合机器指针容量的固定长度的整数类，通常为 31 位长。若是运算结果超出 Fixnum 的范围，则自动延伸成
 <A href="sc_bignum.html">Bignum</A>&nbsp;。</P>
 <H2>超类</H2>
 <UL>
   <LI><A href="sc_integer.html">Integer</A> </LI></UL>
 <H2>方法</H2>
 <DL>
-  <DT>id2name 
+  <DT><A name=L001220>to_sym</A>
   <DD>
-  <P>返回对应 <A href="sc_symbol.html">Symbol</A> 整数的字符串（使用 <A 
-  href="c_symbol.html#L001482">Symbol#to_i</A>&nbsp;获取）。若没有与整数对应的符号就返回 nil。</P>
-  <DT><A name=L001220>to_sym</A> 
-  <DD>
-  <P>返回对应 self 对象整数值的 <A href="sc_symbol.html">Symbol</A> 物件。若没有与整数对应的符号就返回 
+  <P>返回对应 self 对象整数值的 <A href="sc_symbol.html">Symbol</A> 对象。若没有与整数对应的符号就返回
   nil。</P></DD></DL>
 <H6></H6></BODY></HTML>
