--- a/RPGVXAcecn/rgss/sm_comparable.html
+++ b/RPGVXAcecn/rgss/sm_comparable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>Comparable</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
@@ -9,36 +9,36 @@ type=text/css href="../style.css">
 <P>包含所有比较操作的模块。包含此模块的类必须定义基本的比较运算符 &lt;、= 和 &gt;。其他的比较 运算符可以从这些定义中衍生。 </P>
 <H2>方法</H2>
 <DL>
-  <DT><VAR>self</VAR> == <VAR>other</VAR> 
+  <DT><VAR>self</VAR> == <VAR>other</VAR>
   <DD>
   <P>若 <VAR>self</VAR> 与 <VAR>other</VAR> 相等，则返回 true。</P>
   <P>若 &lt;=&gt; 返回 nil，则返回 nil。</P>
-  <DT><VAR>self</VAR> &gt; <VAR>other</VAR> 
+  <DT><VAR>self</VAR> &gt; <VAR>other</VAR>
   <DD>
   <P>若 <VAR>self</VAR> 大于 <VAR>other</VAR>，则返回 true。</P>
-  <P>若 &lt;=&gt; 返回 nil，则抛出 <A 
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 异常。</P>
-  <DT><VAR>self</VAR> &gt;= <VAR>other</VAR> 
+  <P>若 &lt;=&gt; 返回 nil，则抛出 <A
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
+  <DT><VAR>self</VAR> &gt;= <VAR>other</VAR>
   <DD>
   <P>若 <VAR>self</VAR> 大于或与 <VAR>other</VAR> 相等，则返回 true。</P>
-  <P>若 &lt;=&gt; 返回 nil，则抛出 <A 
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 异常。</P>
-  <DT><VAR>self</VAR> &lt; <VAR>other</VAR> 
+  <P>若 &lt;=&gt; 返回 nil，则抛出 <A
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
+  <DT><VAR>self</VAR> &lt; <VAR>other</VAR>
   <DD>
   <P>若 <VAR>self</VAR> 小于 <VAR>other</VAR>，则返回 true。</P>
-  <P>若 &lt;=&gt; 返回 nil，则抛出 <A 
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 异常。</P>
-  <DT><VAR>self</VAR> &lt;= <VAR>other</VAR> 
+  <P>若 &lt;=&gt; 返回 nil，则抛出 <A
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
+  <DT><VAR>self</VAR> &lt;= <VAR>other</VAR>
   <DD>
   <P>若 <VAR>self</VAR> 小于或与 <VAR>other</VAR> 相等，则返回 true。</P>
-  <P>若 &lt;=&gt; 返回 nil，则抛出 <A 
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 异常。</P>
-  <DT>between?(<VAR>min</VAR>, <VAR>max</VAR>) 
+  <P>若 &lt;=&gt; 返回 nil，则抛出 <A
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
+  <DT>between?(<VAR>min</VAR>, <VAR>max</VAR>)
   <DD>
-  <P>若&nbsp;<VAR>self</VAR> 介于（包含） <VAR>min</VAR> 至 <VAR>max</VAR> 的范围，则返回 
+  <P>若&nbsp;<VAR>self</VAR> 介于（包含） <VAR>min</VAR> 至 <VAR>max</VAR> 的范围，则返回
   true。</P>
-  <P>若&nbsp;<VAR>self</VAR> &lt;=&gt; <VAR>min</VAR> 或 <VAR>self</VAR> &lt;=&gt; 
-  <VAR>max</VAR> 返回 nil，则抛出 <A 
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 
+  <P>若&nbsp;<VAR>self</VAR> &lt;=&gt; <VAR>min</VAR> 或 <VAR>self</VAR> &lt;=&gt;
+  <VAR>max</VAR> 返回 nil，则抛出 <A
+  href="s_exceptions.html#ArgumentError">ArgumentError</A>
 异常。</P></DD></DL>
 <H6></H6></BODY></HTML>
