--- a/RPGVXAcecn/rgss/syntax00.html
+++ b/RPGVXAcecn/rgss/syntax00.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>Ruby 语法</FONT></H1>
+<H1>Ruby 语法</H1>
 <UL>
   <LI><A href="syntax01.html">语法与表达式</A> 
   <UL>
