--- a/RPGVXAcecn/rgss/sc_trueclass.html
+++ b/RPGVXAcecn/rgss/sc_trueclass.html
@@ -1,24 +1,24 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>TrueClass</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
 <H1>TrueClass</H1>
-<P>true 值的类。true 是本类唯一的实例。true 是用来表明场合为「真」的物件。</P>
+<P>true 值的类。true 是本类唯一的实例。true 是用来表明「真」的对象。</P>
 <H2>超类</H2>
 <UL>
   <LI><A href="sc_object.html">Object</A> </LI></UL>
 <H2>方法</H2>
 <DL>
-  <DT><VAR>self</VAR> &amp; <VAR>other</VAR> 
+  <DT><VAR>self</VAR> &amp; <VAR>other</VAR>
   <DD>
   <P>若 <VAR>other</VAR> 为真，返回 true，若 other 为伪，返回 false。</P>
-  <DT><VAR>self</VAR> | <VAR>other</VAR> 
+  <DT><VAR>self</VAR> | <VAR>other</VAR>
   <DD>
   <P>一定返回 true。</P>
-  <DT><VAR>self</VAR> ^ <VAR>other</VAR> 
+  <DT><VAR>self</VAR> ^ <VAR>other</VAR>
   <DD>
   <P>若 <VAR>other</VAR> 为真，返回 false，若 other 为伪，返回 true。</P></DD></DL>
 <H6></H6></BODY></HTML>
