--- a/RPGVXAcecn/rgss/sm_math.html
+++ b/RPGVXAcecn/rgss/sm_math.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=zh><HEAD><TITLE>Math</TITLE>
 <META content="text/html; charset=GBK" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 9.00.8112.16447"></HEAD>
 <BODY>
@@ -9,90 +9,90 @@ type=text/css href="../style.css">
 <P>支持浮点小数计算的模块。</P>
 <H2>模块方法</H2>
 <DL>
-  <DT>Math.acos(<VAR>x</VAR>) 
-  <DT>Math.asin(<VAR>x</VAR>) 
-  <DT>Math.atan(<VAR>x</VAR>) 
+  <DT>Math.acos(<VAR>x</VAR>)
+  <DT>Math.asin(<VAR>x</VAR>)
+  <DT>Math.atan(<VAR>x</VAR>)
   <DD>
   <P>以弧度返回 x 的反三角函数计算值。</P>
   <P>返回值的范围分别是 [0, +&#960;]、[-&#960;/2, +&#960;/2] 和 (-&#960;/2, +&#960;/2)。</P>
-  <P>在 acos(x) 和 asin(x) 中，<VAR>x</VAR> 之值必须是 -1.0 &lt;= <VAR>x</VAR> &lt;= 1 
+  <P>在 acos(x) 和 asin(x) 中，<VAR>x</VAR> 之值必须是 -1.0 &lt;= <VAR>x</VAR> &lt;= 1
   的范围（通常返回 NaN）。</P>
-  <P>acos() 和 asin() 遇到超出范围的参数，会抛出 <A 
+  <P>acos() 和 asin() 遇到超出范围的参数，会抛出 <A
   href="s_exceptions.html#Errno">Errno::EDOM</A> 异常。</P>
-  <DT>Math.atan2(<VAR>y</VAR>, <VAR>x</VAR>) 
+  <DT>Math.atan2(<VAR>y</VAR>, <VAR>x</VAR>)
   <DD>
   <P>返回 [-&#960;, &#960;] 范围内的 <VAR>y</VAR>/<VAR>x</VAR> 反正切函数。</P>
-  <DT>Math.acosh(<VAR>x</VAR>) 
-  <DT>Math.asinh(<VAR>x</VAR>) 
-  <DT>Math.atanh(<VAR>x</VAR>) 
+  <DT>Math.acosh(<VAR>x</VAR>)
+  <DT>Math.asinh(<VAR>x</VAR>)
+  <DT>Math.atanh(<VAR>x</VAR>)
   <DD>
   <P>返回 x 的反双曲线函数计算值。</P><PRE>asinh(x) = log(x + sqrt(x * x + 1))
 acosh(x) = log(x + sqrt(x * x - 1)) [x &gt;= 1]
 atanh(x) = log((1+x)/(1-x)) / 2     [-1 &lt; x &lt; 1]
 </PRE>
-  <P>在&nbsp;acosh(x)，<VAR>x</VAR> 必须 &gt;= 1（通常会抛出 <A 
+  <P>在&nbsp;acosh(x)，<VAR>x</VAR> 必须 &gt;= 1（通常会抛出 <A
   href="s_exceptions.html#Errno">Errno::EDOM</A> 异常）。</P>
-  <P>在&nbsp;atanh(x)，<VAR>x</VAR> 必须在 -1.0 &lt; <VAR>x</VAR> &lt; 1 的范围内（通常会抛出 
+  <P>在&nbsp;atanh(x)，<VAR>x</VAR> 必须在 -1.0 &lt; <VAR>x</VAR> &lt; 1 的范围内（通常会抛出
   <A href="s_exceptions.html#Errno">Errno::EDOM</A> 异常）。</P>
-  <DT>Math.cos(<VAR>x</VAR>) 
-  <DT>Math.sin(<VAR>x</VAR>) 
-  <DT>Math.tan(<VAR>x</VAR>) 
+  <DT>Math.cos(<VAR>x</VAR>)
+  <DT>Math.sin(<VAR>x</VAR>)
+  <DT>Math.tan(<VAR>x</VAR>)
   <DD>
   <P>以弧度返回 x 的三角函数 [-1, 1] 的范围内的计算值。</P>
-  <DT>Math.cosh(<VAR>x</VAR>) 
-  <DT>Math.sinh(<VAR>x</VAR>) 
-  <DT>Math.tanh(<VAR>x</VAR>) 
+  <DT>Math.cosh(<VAR>x</VAR>)
+  <DT>Math.sinh(<VAR>x</VAR>)
+  <DT>Math.tanh(<VAR>x</VAR>)
   <DD>
   <P>返回 x 的双曲线函数计算值。</P><PRE>cosh(x) = (exp(x) + exp(-x)) / 2
 sinh(x) = (exp(x) - exp(-x)) / 2
 tanh(x) = sinh(x) / cosh(x)
 </PRE>
-  <DT>Math.erf(<VAR>x</VAR>) 
-  <DT>Math.erfc(<VAR>x</VAR>) 
+  <DT>Math.erf(<VAR>x</VAR>)
+  <DT>Math.erfc(<VAR>x</VAR>)
   <DD>
-  <P>返回 x 
+  <P>返回 x
   的误差函数（erf）、补余误差函数（erfc）的计算值。</P>
-  <DT>Math.exp(<VAR>x</VAR>) 
+  <DT>Math.exp(<VAR>x</VAR>)
   <DD>
   <P>返回 <VAR>x</VAR> 的指数函数计算值。</P>
-  <DT>Math.frexp(<VAR>x</VAR>) 
+  <DT>Math.frexp(<VAR>x</VAR>)
   <DD>
-  <P>返回实数 <VAR>x</VAR> 的浮点数字表示法（<FONT class=post>exponent and mantissa 
+  <P>返回实数 <VAR>x</VAR> 的浮点数字表示法（<FONT class=post>exponent and mantissa
   </FONT><FONT class=post>指数与假数</FONT>）。</P>
-  <DT>Math.hypot(<VAR>x</VAR>, <VAR>y</VAR>) 
+  <DT>Math.hypot(<VAR>x</VAR>, <VAR>y</VAR>)
   <DD>
   <P>返回&nbsp;sqrt(x*x + y*y)。（sqrt为求平方根函数，也即是求x、y在直角三角形中的斜边）</P>
-  <DT>Math.ldexp(<VAR>x</VAR>, <VAR>exp</VAR>) 
+  <DT>Math.ldexp(<VAR>x</VAR>, <VAR>exp</VAR>)
   <DD>
   <P>返回实数 x 乘以 2 的 exp 幂数的最终结果。（x * 2<SUP>exp</SUP>）&nbsp;</P>
-  <DT>Math.log(<VAR>x</VAR>) 
+  <DT>Math.log(<VAR>x</VAR>)
   <DD>
   <P>返回 x 的自然对数。<VAR></VAR></P>
   <P><VAR>x</VAR> 必须是正值（通常负值会返回 NaN，0 会返回负无穷）。</P>
-  <P>超出范围的参数，负数会抛出 <A href="s_exceptions.html#Errno">Errno::EDOM</A> 异常，而 0 会抛出 
+  <P>超出范围的参数，负数会抛出 <A href="s_exceptions.html#Errno">Errno::EDOM</A> 异常，而 0 会抛出
   <A href="s_exceptions.html#Errno">Errno::ERANGE</A> 异常。</P>
-  <DT>Math.log10(<VAR>x</VAR>) 
+  <DT>Math.log10(<VAR>x</VAR>)
   <DD>
   <P>返回 x 的常用对数。<VAR></VAR></P>
   <P><VAR>x</VAR> 必须是正值（通常负值会返回 NaN，0 会返回负无穷）。</P>
-  <P>超出范围的参数，负数会抛出 <A 
-  href="ata/Local/Temp/RPGVXAce/rgss/s_exceptions.html#Errno">Errno::EDOM</A> 
-  异常，而 0 会抛出 <A 
-  href="ata/Local/Temp/RPGVXAce/rgss/s_exceptions.html#Errno">Errno::ERANGE</A> 
+  <P>超出范围的参数，负数会抛出 <A
+  href="ata/Local/Temp/RPGVXAce/rgss/s_exceptions.html#Errno">Errno::EDOM</A>
+  异常，而 0 会抛出 <A
+  href="ata/Local/Temp/RPGVXAce/rgss/s_exceptions.html#Errno">Errno::ERANGE</A>
   异常。</P>
-  <DT>Math.sqrt(<VAR>x</VAR>) 
+  <DT>Math.sqrt(<VAR>x</VAR>)
   <DD>
-  <P>返回 <VAR>x</VAR> 的平方根号。若 <VAR>x</VAR> 为负数，抛出 <A 
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 异常。</P>
+  <P>返回 <VAR>x</VAR> 的平方根号。若 <VAR>x</VAR> 为负数，抛出 <A
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
   <P>通常负数会抛出 <A href="s_exceptions.html#Errno">Errno::EDOM</A> 异常。</P></DD></DL>
 <H2>定数</H2>
 <DL>
-  <DT>E 
+  <DT>E
   <DD>
   <P>自然对数的底数。</P><PRE>p Math::E
 # =&gt; 2.718281828
 </PRE>
-  <DT>PI 
+  <DT>PI
   <DD>
   <P>圆周率。</P><PRE>p Math::PI
 # =&gt; 3.141592654
