--- a/RPGVXAcecn/rgss/syntax05.html
+++ b/RPGVXAcecn/rgss/syntax05.html
@@ -5,7 +5,7 @@
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17744"></HEAD>
 <BODY>
-<H1><FONT face=Verdana>控制结构</FONT></H1>
+<H1>控制结构</H1>
 <UL>
   <LI><A href="#L000296">条件分歧</A> 
   <UL>
@@ -35,51 +35,51 @@ type=text/css href="../style.css">
 <P>Ruby 从 C&nbsp;和 Perl 语言承继了部分的控制结构，但是也有一种精简循环的特别结构&#9472;&#9472;&nbsp;<A 
 href="syntax06.html#L000323">迭代器</A> ，一种允许用户自定义循环的控制结构。</P>
 <H2><A name=L000296>条件分歧</A></H2>
-<H3><A name=L000297><FONT face=Verdana>if</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>if age &gt;= 12 then
+<H3><A name=L000297>if</A></H3>
+<P>实例：</P><PRE>if age &gt;= 12 then
   print "adult fee\n"
 else
   print "child fee\n"
 end
-gender = if foo.gender == "male" then "male" else "female" end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>if 表达式 [then]
+gender = if foo.gender == "male" then "male" else "female" end</PRE>
+<P>语法：</P><PRE>if 表达式 [then]
   表达式 ...
 [elsif 表达式 [then]
   表达式 ... ]
 ...
 [else
   表达式 ... ]
-end</FONT></PRE>
+end</PRE>
 <P>若是条件表达式计算为 true，则计算以 then 开头的表达式。若 if 表达式为 false，则计算 elsif 条件。可以指定多个 elsif 
 条件子句，当 if 或所有的 elsif 条件表达式都是 false 时，则计算 else 表达式（如果有的话）。</P>
 <P>if 返回条件表达式中（或 else 子句）最后计算的表达式计算值。若条件表达式中无 else 子句，并且没有一个条件表达式成立，则返回 nil。</P>
 <P>在Ruby中，代表「伪」的值只有 false 和 nil；其余的包括0和空字符串都代表「真」。</P>
 <P>注意在 Ruby 中，if 后面使用的是 elsif ，而不是 C 语言所用的 else if 或 sh 所使用的 elif 。</P>
-<H3><A name=L000298><FONT face=Verdana>if </FONT></A><FONT 
+<H3><A name=L000298>if </A><FONT 
 face=Verdana>修饰符</FONT></H3>
-<P>实例：</P><PRE><FONT face=Verdana>print "debug\n" if $DEBUG</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>表达式 if 表达式</FONT></PRE>
+<P>实例：</P><PRE>print "debug\n" if $DEBUG</PRE>
+<P>语法：</P><PRE>表达式 if 表达式</PRE>
 <P>若右方的表达式计算为 true， 则计算并返回左方的表达式。若右方的表达式不成立，则返回 nil。</P>
-<H3><A name=L000299><FONT face=Verdana>unless</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>unless baby?
+<H3><A name=L000299>unless</A></H3>
+<P>实例：</P><PRE>unless baby?
   feed_meat
 else
   feed_milk
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>unless 表达式 [then]
+end</PRE>
+<P>语法：</P><PRE>unless 表达式 [then]
   表达式 ...
 [else
   表达式 ... ]
-end</FONT></PRE>
-<P><CODE><FONT face=Verdana>unless 是 if 的相反方法；当条件表达式为&nbsp; false 时，执行 then 
-开头的表达式。 unless 不能使用 elsif 语句。</FONT></CODE></P>
-<H3><A name=L000300><FONT face=Verdana>unless </FONT></A><FONT 
+end</PRE>
+<P><CODE>unless 是 if 的相反方法；当条件表达式为&nbsp; false 时，执行 then 
+开头的表达式。 unless 不能使用 elsif 语句。</CODE></P>
+<H3><A name=L000300>unless </A><FONT 
 face=Verdana>修饰符</FONT></H3>
-<P>实例：</P><PRE><FONT face=Verdana>print "stop\n" unless valid(passwd)</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>表达式 unless 表达式</FONT></PRE>
+<P>实例：</P><PRE>print "stop\n" unless valid(passwd)</PRE>
+<P>语法：</P><PRE>表达式 unless 表达式</PRE>
 <P>若右方的表达式计算为 false， 则计算并返回左方的表达式。否则返回 nil。</P>
-<H3><A name=L000301><FONT face=Verdana>case</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>case $age
+<H3><A name=L000301>case</A></H3>
+<P>实例：</P><PRE>case $age
 when 0 .. 2
   "baby"
 when 3 .. 6
@@ -90,115 +90,115 @@ when 13 .. 18
   "youth"
 else
   "adult"
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>case 表达式
+end</PRE>
+<P>语法：</P><PRE>case 表达式
 [when 表达式 [, 表达式] ... [then]
   表达式 ..]..
 [else
   表达式 ..]
-end</FONT></PRE>
-<P><CODE><FONT face=Verdana>case 先对单一的表达式进行匹配判断。使用===运算符比较第一个表达式的计算值以及 when 
-子句的指定值，当计算值与指定值匹配时，则计算 when 子句的内容。</FONT></CODE></P>
-<P><CODE><FONT face=Verdana>case 返回最后一个计算的 when（或else）子句的计算值，所有条件均不成立时，则返回 
-nil。</FONT></CODE></P>
+end</PRE>
+<P><CODE>case 先对单一的表达式进行匹配判断。使用===运算符比较第一个表达式的计算值以及 when 
+子句的指定值，当计算值与指定值匹配时，则计算 when 子句的内容。</CODE></P>
+<P><CODE>case 返回最后一个计算的 when（或else）子句的计算值，所有条件均不成立时，则返回 
+nil。</CODE></P>
 <H2><A name=L000302>循环</A></H2>
-<H3><A name=L000303><FONT face=Verdana>while</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>ary = [0,2,4,8,16,32,64,128,256,512,1024]
+<H3><A name=L000303>while</A></H3>
+<P>实例：</P><PRE>ary = [0,2,4,8,16,32,64,128,256,512,1024]
 i = 0
 while i &lt; ary.length
   print ary[i]
   i += 1
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>while 表达式 [do]
+end</PRE>
+<P>语法：</P><PRE>while 表达式 [do]
    ...
-end</FONT></PRE>
+end</PRE>
 <P>只要表达式的计算值为 true，就不断执行 while 语句之间的内容。</P>
 <P>while 返回 nil。如果内容中有带参数的 break，则 while 会返回该参数的值。</P>
-<H3><A name=L000304><FONT face=Verdana>while 修饰符</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>sleep(60) while io_not_ready?</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>表达式 while 表达式</FONT></PRE>
+<H3><A name=L000304>while 修饰符</A></H3>
+<P>实例：</P><PRE>sleep(60) while io_not_ready?</PRE>
+<P>语法：</P><PRE>表达式 while 表达式</PRE>
 <P>只要右边的表达式为 true，就不断执行左边的表达式。若是左方的表达式是begin，则 while先计算左方，再执行循环。</P>
 <P>while修饰符 返回 nil。 如果内容中有带参数的 break，则 while 修饰符 会返回该参数的值。</P>
-<H3><A name=L000305><FONT face=Verdana>until</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>until f.eof?
+<H3><A name=L000305>until</A></H3>
+<P>实例：</P><PRE>until f.eof?
   print f.gets
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>until 表达式 [do]
+end</PRE>
+<P>语法：</P><PRE>until 表达式 [do]
    ...
-end</FONT></PRE>
+end</PRE>
 <P>在表达式的计算值为 true 之前，就不断执行 until 语句之间的内容。</P>
 <P>until 返回 nil。如果内容中有带参数的 break，则 until 会返回该参数的值。</P>
-<H3><A name=L000306><FONT face=Verdana>until 修饰符</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>print(f.gets) until f.eof?</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>表达式 until 表达式</FONT></PRE>
+<H3><A name=L000306>until 修饰符</A></H3>
+<P>实例：</P><PRE>print(f.gets) until f.eof?</PRE>
+<P>语法：</P><PRE>表达式 until 表达式</PRE>
 <P>只要右边的表达式为 false，就不断执行左边的表达式。若是左方的表达式是begin，则 until 先计算左方，再执行循环。 <BR>until修饰符 
 返回 nil。 如果内容中有带参数的 break，则 until 修饰符会返回该参数的值。</P>
-<H3><A name=L000307><FONT face=Verdana>for</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>for i in [1, 2, 3]
+<H3><A name=L000307>for</A></H3>
+<P>实例：</P><PRE>for i in [1, 2, 3]
   print i*2, "\n"
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>for lhs ...  in 表达式 [do]
+end</PRE>
+<P>语法：</P><PRE>for lhs ...  in 表达式 [do]
   表达式 ..
-end</FONT></PRE>
-<P>计算表达式中的每一个元素，然后针对每一个元素重复执行 for 的内容。几乎与下面的语法一样：</P><PRE><FONT face=Verdana>(表达式).each '{' '|' lhs..'|' 表达式 .. '}'</FONT></PRE>
+end</PRE>
+<P>计算表达式中的每一个元素，然后针对每一个元素重复执行 for 的内容。几乎与下面的语法一样：</P><PRE>(表达式).each '{' '|' lhs..'|' 表达式 .. '}'</PRE>
 <P>只是「几乎」一样因为使用 by do ... end 或 { } 的区块导入了新的区域变量的有效范围，而 for 对于区域变量的有效范围没有影响。</P>
 <P>for 返回 in 指定的对象的 each 方法的返回值。</P>
-<H3><A name=L000308><FONT face=Verdana>break</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>i = 0
+<H3><A name=L000308>break</A></H3>
+<P>实例：</P><PRE>i = 0
 while i &lt; 3
   print i, "\n"
   break
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>break [表达式]</FONT></PRE>
-<P><CODE><FONT face=Verdana>break 从最内层的循环中退出，循环是指下列的任何一项：</FONT></CODE></P>
+end</PRE>
+<P>语法：</P><PRE>break [表达式]</PRE>
+<P><CODE>break 从最内层的循环中退出，循环是指下列的任何一项：</CODE></P>
 <UL>
-  <LI><FONT face=Verdana><CODE>while</CODE> </FONT>
-  <LI><FONT face=Verdana><CODE>until</CODE> </FONT>
-  <LI><FONT face=Verdana><CODE>for</CODE> </FONT>
+  <LI><CODE>while</CODE> 
+  <LI><CODE>until</CODE> 
+  <LI><CODE>for</CODE> 
   <LI>迭代 </LI></UL>
 <P>与 C 语言不同， break 只能退出循环，而不能退出 case。</P>
 <P>for 或迭代器若是使用 break 退出则返回 nil，然而若是指定了参数，则退出时返回该参数。</P>
-<H3><A name=L000309><FONT face=Verdana>next</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>str.each_line do |line|
+<H3><A name=L000309>next</A></H3>
+<P>实例：</P><PRE>str.each_line do |line|
   next if line.empty?
   print line
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>next [表达式]</FONT></PRE>
-<P><FONT face=Verdana><CODE>next 跳到最内层的循环的开始处。而在</CODE> </FONT><A 
+end</PRE>
+<P>语法：</P><PRE>next [表达式]</PRE>
+<P><CODE>next 跳到最内层的循环的开始处。而在</CODE> <A 
 href="syntax06.html#L000323">迭代器</A>&nbsp;中， next&nbsp;则可以跳脱 <A 
 href="syntax06.html#L000324">yield</A> 的调用。</P>
 <P>yield 可以依靠 next 跳脱并返回 nil。然而，若是指定了参数， yield 则会返回该参数。</P>
 <P>注：跳脱其实就是中断调用的意思</P>
 <H2><A name=L000312>异常处理</A></H2>
-<H3><A name=L000313><FONT face=Verdana>raise</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>raise
+<H3><A name=L000313>raise</A></H3>
+<P>实例：</P><PRE>raise
 raise "you lose"
 raise SyntaxError.new("invalid syntax")
-raise SyntaxError, "invalid syntax"</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>raise
+raise SyntaxError, "invalid syntax"</PRE>
+<P>语法：</P><PRE>raise
 raise message
 raise exception
-raise error_type, message</FONT></PRE>
+raise error_type, message</PRE>
 <P>抛出异常。第一种形式是重抛上一次发生的异常，第二种形式是指定一个字符串参数，并抛出以该字符串为讯息的 <A 
 href="s_exceptions.html#RuntimeError">RuntimeError（运行中异常）</A> 
 异常。第三种形式则抛出作为参数的异常对象。最后一种形式则是抛出第一个参数的异常对象，并以第二个参数的字符串作为讯息。</P>
 <P>抛出的异常可以由 begin 表达式中的 rescue 字句所捕捉。</P>
 <P><A href="s_functions.html#L000388">raise</A> 并非 Ruby 中的保留字，而是内建函数。</P>
-<H3><A name=L000314><FONT face=Verdana>begin</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>begin
+<H3><A name=L000314>begin</A></H3>
+<P>实例：</P><PRE>begin
   do_something
 rescue
   recover
 ensure
   must_to_do
-end</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>begin
+end</PRE>
+<P>语法：</P><PRE>begin
   表达式 ..
 [rescue [error_type,..] [then]
   表达式 ..]..
 [ensure
   表达式 ..]
-end</FONT></PRE>
+end</PRE>
 <P>当 begin 执行中时抛出了任何异常，就会由一个 rescue 子句所捕捉（可以使用多个 rescue 子句）。当抛出的异常符合某个 
 rescue所指定的异常类型时，就会执行该 rescue 子句。所抛出的异常可以使用内建变量 <A 
 href="s_variables.html#L000437">$!</A>&nbsp;来引用。</P>
@@ -211,17 +211,17 @@ href="ata/Local/Temp/RPGVXAce/rgss/s_exceptions.html#StandardError">StandardErro
 href="s_exceptions.html#TypeError">TypeError型异常）</A> 异常。</P>
 <P>若是有 ensure 子句的话，在 begin 表达式退出前，一定会计算该子句。</P>
 <P>begin 返回的是在其自身或是 rescue 中最后计算的参数结果。</P>
-<H3><A name=L000315><FONT face=Verdana>rescue 修饰符</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>File.open("file") rescue print "can't open\n"</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>表达式1 rescue 表达式2</FONT></PRE>
+<H3><A name=L000315>rescue 修饰符</A></H3>
+<P>实例：</P><PRE>File.open("file") rescue print "can't open\n"</PRE>
+<P>语法：</P><PRE>表达式1 rescue 表达式2</PRE>
 <P>当第一个表达式抛出异常时，则计算第二个表达式。但是无法指定所捕捉的异常类，也就是说只能捕捉 <A 
 href="s_exceptions.html#StandardError">StandardError（标准异常）</A>&nbsp;子类的异常类。</P>
 <P>与 rescue 修饰符关连的表达式在没有抛出异常时返回表达式1 ，否则则返回 表达式2 。</P>
 <H2><A name=L000316>方法结束</A></H2>
-<H3><A name=L000317><FONT face=Verdana>return</FONT></A></H3>
-<P>实例：</P><PRE><FONT face=Verdana>return
+<H3><A name=L000317>return</A></H3>
+<P>实例：</P><PRE>return
 return 12
-return 1,2,3</FONT></PRE>
-<P>语法：</P><PRE><FONT face=Verdana>return [表达式[',' 表达式 ... ]]</FONT></PRE>
+return 1,2,3</PRE>
+<P>语法：</P><PRE>return [表达式[',' 表达式 ... ]]</PRE>
 <P>使用返回值结束方法。提供两个或以上的表达式时，则该方法凡回包含所有表达式的计算值数组。若是没有表达式，则返回值为 nil。</P>
 <H6></H6></BODY></HTML>
